[gd_scene load_steps=4 format=3 uid="uid://cbo1sg40k8ca1"]

[ext_resource type="Script" uid="uid://b4yhmwcymwv2q" path="res://burningtree.gd" id="1_ibl33"]
[ext_resource type="Texture2D" uid="uid://tyyu1ucsacpb" path="res://icon.svg" id="2_xktx4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d2g23"]
radius = 40.0

[node name="burningTree" type="Area2D" node_paths=PackedStringArray("sprite", "burnTimer")]
script = ExtResource("1_ibl33")
sprite = NodePath("Sprite2D")
burnTimer = NodePath("burnTriggerTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.027451, 0.513726, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_xktx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d2g23")

[node name="burnTriggerTimer" type="Timer" parent="."]
wait_time = 2.196
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="burnTriggerTimer" to="." method="_on_burn_trigger_timer_timeout"]
